replace isblank with apache commons equivalent